--- a/frontend/admin-login.html
+++ b/frontend/admin-login.html
@@ -261,6 +261,8 @@
         `;
         document.head.appendChild(style);
     </script>
+    <script src="./notfound.js"></script>
+
 </body>
 
 </html>
