--- a/frontend/admin-portal.html
+++ b/frontend/admin-portal.html
@@ -76,6 +76,8 @@
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="./notfound.js"></script>
+
 
 </body>
 </html>
