--- a/frontend/backups/ad.html
+++ b/frontend/backups/ad.html
@@ -336,6 +336,9 @@
         integrity="sha384-oBqDVmMz4fnFO9gybbyV4BpmrbR/xAKyZOJVoXKgf5gk5z9RYf8qkPa7rrBlb91p"
         crossorigin="anonymous"></script>
 
+    <script src="./notfound.js"></script>
+
+
 </body>
 
 </html>
