--- a/frontend/backups/userDashboard.html
+++ b/frontend/backups/userDashboard.html
@@ -222,5 +222,8 @@
         &copy; 2025 Library Management System | Contact Us | Privacy Policy
     </footer>
 
+    <script src="./notfound.js"></script>
+
+
 </body>
 </html>
