--- a/frontend/faculty-login.html
+++ b/frontend/faculty-login.html
@@ -301,5 +301,7 @@
         `;
         document.head.appendChild(style);
     </script>
+    <script src="./notfound.js"></script>
+
 </body>
 </html>
